added ek support